text demo + spacing fixes

--- a/style.css
+++ b/style.css
@@ -5,9 +5,14 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: black;
+}
+
 canvas {
     width: 100vw;
     height: 95vh;
+    display: block;
 }
 
 nav {
@@ -17,6 +22,7 @@ nav {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    flex-flow: row wrap;
 }
 
 nav > * {
